# tp-final-taller-1

./: .gitignore  CMakeLists.txt  README.md  analisis-log-servidor.ipynb
src/: CMakeLists.txt
src/cliente/: CMakeLists.txt  a.cpp  a.h  cliente_juego.cpp  cliente_juego.h  config.h.in  error_sdl.cpp  error_sdl.h  main.cpp  partida.cpp  partida.h  servidor.cpp  servidor.h
src/cliente/eventos/: evento.h  evento_disparo.cpp  evento_disparo.h  evento_ejercito.cpp  evento_ejercito.h  evento_entorno.cpp  evento_entorno.h  evento_infraestructura.cpp  evento_infraestructura.h  evento_jugador.cpp  evento_jugador.h  evento_terminar.cpp  evento_terminar.h  factory_evento.cpp  factory_evento.h
src/cliente/lanzador/: CMakeLists.txt  estado_conectado.cpp  estado_conectado.h  estado_desconectado.cpp  estado_desconectado.h  estado_en_sala.cpp  estado_en_sala.h  estado_lanzador.cpp  estado_lanzador.h  jugador.cpp  jugador.h  lanzador.cpp  lanzador.h  lanzador.ui  lanzador_elegir_sala.cpp  lanzador_elegir_sala.h  lanzador_elegir_sala.ui  lanzador_en_sala.cpp  lanzador_en_sala.h  lanzador_en_sala.ui  ui_lanzador.fwd.h  ui_lanzador_elegir_sala.fwd.h  ui_lanzador_en_sala.fwd.h  ui_ventana_juego_terminado.fwd.h  ventana_juego_terminado.cpp  ventana_juego_terminado.h  ventana_juego_terminado.ui  ventana_principal.cpp  ventana_principal.h
src/cliente/modelo/: CMakeLists.txt  celda.cpp  celda.h  controlador.cpp  controlador.h  cosechadora.h  data_terreno.h  disparo.h  disparo_misil.cpp  disparo_misil.h  disparo_ondas.cpp  disparo_ondas.h  disparo_plasma.cpp  disparo_plasma.h  disparo_proyectil.cpp  disparo_proyectil.h  edificio.cpp  edificio.h  ejercito.cpp  ejercito.h  gusano_arena.cpp  gusano_arena.h  hud.cpp  hud.h  infraestructura.cpp  infraestructura.h  juego.cpp  juego.h  jugador.cpp  jugador.h  pantalla_carga.cpp  pantalla_carga.h  servidor.h  sprite.cpp  sprite.h  sprite_animado.cpp  sprite_animado.h  sprite_compuesto.cpp  sprite_compuesto.h  terreno.cpp  (+3 more)
src/cliente/red/: CMakeLists.txt  partida.cpp  partida.h  servidor.cpp  servidor.h  servidor_protegido.cpp  servidor_protegido.h
src/cliente/sonido/: CMakeLists.txt  sonido.cpp  sonido.h
src/cliente/video/: CMakeLists.txt  README.md  administrador_texturas.cpp  administrador_texturas.h  camara.cpp  camara.h  color.cpp  color.h  error_sdl.cpp  error_sdl.h  i_notificable.h  lock.cpp  log.cpp  log.h  posicion.cpp  posicion.h  rectangulo.cpp  rectangulo.h  superficie.h  teclas.h  textura.cpp  textura.h  ventana.cpp  ventana.h
src/comun/: CMakeLists.txt  README.md  cola_protegida.h  conexion.cpp  conexion.h  dummy.cpp  error_conexion.cpp  error_conexion.h  error_socket.cpp  error_socket.h  eventos_cliente.h  eventos_servidor.h  i_jugador.h  i_modelo.h  lock.cpp  lock.h  log.cpp  log.h  socket_conexion.cpp  socket_conexion.h
src/conexion/: CMakeLists.txt  conexion.cpp  conexion.h  error_conexion.cpp  error_conexion.h  error_socket.cpp  error_socket.h  evento.h  eventos_cliente.h  eventos_servidor.h  factory_evento.cpp  factory_evento.h  i_jugador.h  i_modelo.h  lock.cpp  socket_conexion.cpp  socket_conexion.h
src/conexion/eventos/: evento_actualizar_dinero.cpp  evento_actualizar_dinero.h  evento_crear_edificio.cpp  evento_crear_edificio.h  evento_destruir_edificio.cpp  evento_destruir_edificio.h  evento_juego_terminado.cpp  (+7 more)
src/editor/: CMakeLists.txt  DialogoBienvenida.cpp  DialogoBienvenida.h  Editor.cpp  Editor.h  GeneradorSprites.cpp  GeneradorSprites.h  LabelMapa.cpp  LabelMapa.h  LabelTab.cpp  LabelTab.h  ManejadorJson.cpp  ManejadorJson.h  Mapa.cpp  Mapa.h  ObservadorTabs.h  README.md  Sprite.h  Tabs.cpp  Tabs.h  config.h.in  dialogo_bienvenida.cpp  dialogo_bienvenida.h  editor.cpp  editor.h  generador_sprites.cpp  generador_sprites.h  label_mapa.cpp  label_mapa.h  label_tab.cpp  label_tab.h  main.cpp  manejador_json.cpp  manejador_json.h  mapa.cpp  mapa.h  mapa_prueba_4.json  observador.h  observador_mapa.h  observador_tabs.h  (+2 more)
src/modelo/: Arma.h  CMakeLists.txt  Edificio.h  Infraestructura.cpp  Unidad.cpp  Unidad.h  a_estrella.cpp  a_estrella.h  actor.cpp  actor.h  actor_armado.cpp  actor_armado.h  actor_vivo.cpp  actor_vivo.h  arma.cpp  arma.h  arma_base.cpp  arma_base.h  arma_caracteristicas.h  arma_creador.cpp  arma_creador.h  atacable.h  ataque_caminado.h  broadcaster.cpp  broadcaster.h  cañon.cpp  cañon.h  celda.cpp  celda.h  cosechadora.cpp  cosechadora.h  cpplint.py  edificio.cpp  edificio.h  edificio_base.cpp  edificio_base.h  edificio_caracteristicas.cpp  edificio_caracteristicas.h  edificios.json  ejercito.cpp  (+31 more)
src/modelo1/: a_estrella.h  grafo.h  posicion.cpp  posicion.h  terreno.cpp  terreno.h
src/modelo2/: CMakeLists.txt  a_estrella.cpp  a_estrella.h  arma.cpp  arma_base.cpp  arma_base.h  arma_creador.cpp  arma_creador.h  broadcaster.cpp  celda.cpp  cosechadora.cpp  cosechadora.h  edificio.cpp  edificio_base.cpp  edificio_base.h  edificio_caracteristicas.cpp  ejercito.h  ejercito_creador.cpp  gusano.h  hipnosis.h  id.cpp  id.h  infraestructura_creador.cpp  infraestructura_creador.h  juego.h  jugador.h  posicion.cpp  posicion.h  terreno.h  unidad.h  unidad_base.cpp  unidad_base.h
src/servidor/: CMakeLists.txt  admin_mapas.cpp  admin_mapas.h  cliente.cpp  cliente.h  cola.cpp  cola.h  cola_protegida.cpp  cola_protegida.h  conexion.cpp  conexion_jugador.cpp  conexion_jugador.h  config.h.in  error_conexion.cpp  error_conexion.h  error_configuracion.cpp  error_configuracion.h  error_valor.cpp  error_valor.h  hilo.cpp  i_jugador.h  i_modelo.h  j.json  lobby.cpp  lobby.h  main.cpp  mati-unit-tests.cpp  matriz_asientos.cpp  matriz_asientos.h  mock_modelo.h  procesador_configuracion.cpp  procesador_configuracion.h  sala.cpp  sala.h  servidor.cpp  servidor.h  socket_aceptador.cpp  socket_aceptador.h  socket_conexion.h  terreno.csv
src/servidor1/: error_socket.cpp  main.cpp  socket_aceptador.h
src/servidor2/: conexion.h  hilo.h  socket_conexion.cpp
test/: CMakeLists.txt  README.md  test-main.cpp.in  test-plantilla.h  testing.cpp  testing.h
test/cliente/: test-a.h
test/modelo/: test-a-estrella.h  test-posicion.h
(+147 files in other folders)
